<resources>
    <string name="user">Usuario</string>
    <string name="enter">Entrar</string>
    <string name="startLogin">Ingrese su usuario y contraseña</string>
    <string name="name">Nombre:</string>
    <string name="nickname">Apodo</string>
    <string name="contact">Imagen Contacto</string>
    <string name="phone">Teléfono:</string>
    <string name="create">Crear</string>
    <string name="createUser">¿No tienes un usuario? ¡Creese uno ahora!</string>
    <string name="createNewUser">Introduzca un nombre de usuario y una contraseña</string>
    <string name="description">Descripción:</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="lorem2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pulvinar neque laoreet suspendisse interdum consectetur. Sed ullamcorper morbi tincidunt ornare massa eget. Posuere sollicitudin aliquam ultrices sagittis orci a scelerisque.</string>
    <string name="call">Llamar</string>
    <string name="save">Guardar</string>
    <string name="submitContact">Añadir Contacto</string>
    <string name="deleteContact">Eliminar Contacto</string>
    <string name="delete">Borrar</string>
    <string name="registrar">Registrar</string>
    <string name="acceder">Acceder</string>
    <string name="submit">Añadir</string>
    <string name="access">Acceder</string>
    <string name="register">Registrarse</string>
    <string name="app_name">Agendos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="email">Correo Electrónico:</string>
    <string name="password">Contraseña:</string>
    <string name="acceso">Acceso</string>
    <string name="registro">Registro</string>
    <string name="agendos_description">Agendos, tu agenda dinamica</string>
    <string name="agendos_mail">agendos@gmail.com</string>
    <string name="menu_insert">Añadir Contacto</string>
    <string name="log_out">Cerrar Sesion</string>
    <string name="main_menu">Pagina Principal</string>
    <string name="create_account">¿No dispone de una cuenta? Creesela ahora</string>
    <string name="last_name">Apellidos</string>
    <string name="form">Formulario de nueva cuenta</string>
    <string name="todo">TODO</string>
    <string name="login_account">Ingrese su correo electronico y contraseña</string>
    <string name="create_contact">Añadir contacto</string>
    <string name="image">Imagen</string>
    <string name="mail">Email</string>
    <string name="delete_contact">Borrar Contacto</string>
</resources>