<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/imagen"
                android:layout_width="70dp"
                android:layout_height="80dp"
                android:background="@drawable/rounded"
                android:clipToOutline="true"
                android:contentDescription="@string/todo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.065"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/contact_2"
                tools:targetApi="s" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="12dp"
                android:layout_toEndOf="@+id/imagen">
                <TextView
                    android:id="@+id/nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="16sp"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="44dp"
                android:layout_toEndOf="@+id/imagen">
                <TextView
                    android:id="@+id/telefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textSize="16sp">
                </TextView>
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>